--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -185,7 +185,7 @@
     <button id="getCompanyButton" onclick="getCompanies()">Получить компании</button>
     <button id="updateBitrixIdButton" onclick="updateBitrixId()">Обновить ID</button>
 </div>
-
+<script src="https://api.bitrix24.com/api/v1/"></script>
 <script>
     let selectedProductId = null;
 let selectedProductName = null;
