--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -858,7 +858,7 @@ function filterClients() {
             getDealIdFromParent();
         });
         } else {
-            Authoritation()
+            // Authoritation()
         }
         // Инициализируем API и выполняем извлечение ID
 
