--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -888,7 +888,7 @@ function filterClients() {
         }
 
         // Сначала получаем цены через API
-        fetch('/api/update_parameters/', {
+        fetch('/api/update_parameters_product_bitrix/', {
             method: 'GET',
             headers: {
                 'Content-Type': 'application/json',
