--- a/oko_project/bitrix_calc/templates/calculation_list.html
+++ b/oko_project/bitrix_calc/templates/calculation_list.html
@@ -97,6 +97,7 @@
             background-color: #218838;
         }
     </style>
+    <script src="https://api.bitrix24.com/api/v1/"></script>
     <script src="https://cdn.jsdelivr.net/npm/@bitrix/desktop/dist/desktop.bundle.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
